完善分享朋友圈+完成织梦插件升级

--- a/project.config.json
+++ b/project.config.json
@@ -3,28 +3,34 @@
 	"setting": {
 		"urlCheck": false,
 		"es6": true,
+		"enhance": false,
 		"postcss": true,
 		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": false,
 		"coverView": true,
+		"nodeModules": false,
+		"autoAudits": false,
 		"showShadowRootInWxmlPanel": true,
 		"scopeDataCheck": false,
+		"uglifyFileName": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
 		"babelSetting": {
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": true
+		"useIsolateContext": true,
+		"useCompilerModule": true,
+		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.7.1",
-	"appid": "wx1c34b9806b78f036",
-	"projectname": "%E5%B0%8F%E9%95%87%E6%95%85%E4%BA%8Blife%E5%BC%80%E6%BA%90%E7%89%88",
+	"libVersion": "2.11.3",
+	"appid": "wx4879cff67095239e",
+	"projectname": "%E5%B0%8F%E9%95%87%E6%95%85%E4%BA%8BLife%E5%BC%80(%E6%BA%90%E7%89%88)",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"condition": {
